[gd_scene load_steps=15 format=2]

[ext_resource path="res://Chrono.tscn" type="PackedScene" id=1]
[ext_resource path="res://Characters/Player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Game.gd" type="Script" id=3]
[ext_resource path="res://Rooms.gd" type="Script" id=4]
[ext_resource path="res://Art/v1.1 dungeon crawler 16x16 pixel pack/ui (new)/health_ui.png" type="Texture" id=5]
[ext_resource path="res://Art/progress bar.png" type="Texture" id=6]
[ext_resource path="res://UI.gd" type="Script" id=7]
[ext_resource path="res://Art/greySheet.png" type="Texture" id=8]
[ext_resource path="res://joystick/virtual_joystick.tscn" type="PackedScene" id=9]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.713726, 0.670588, 0.670588, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[sub_resource type="CircleShape2D" id=5]
radius = 28.0

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 8 )
region = Rect2( 190, 276, 28, 39 )

[sub_resource type="CircleShape2D" id=3]
radius = 20.0

[sub_resource type="StyleBoxEmpty" id=6]

[node name="Game" type="Node2D"]
script = ExtResource( 3 )

[node name="UI" type="CanvasLayer" parent="."]
layer = 2
script = ExtResource( 7 )

[node name="HealthBar" type="TextureProgress" parent="UI"]
margin_left = 10.0
margin_top = 10.0
margin_right = 80.0
margin_bottom = 16.0
value = 23.0
texture_over = ExtResource( 5 )
texture_progress = ExtResource( 6 )
tint_progress = Color( 0.498039, 0.0313726, 0.0313726, 1 )

[node name="Tween" type="Tween" parent="UI/HealthBar"]

[node name="PanelContainer" type="PanelContainer" parent="UI"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -7.0
margin_top = -30.0
margin_right = 7.0
margin_bottom = -16.0
grow_horizontal = 2
custom_styles/panel = SubResource( 1 )

[node name="Inventory" type="HBoxContainer" parent="UI/PanelContainer"]
margin_left = 2.0
margin_top = 2.0
margin_right = 12.0
margin_bottom = 12.0

[node name="Chrono" parent="UI" instance=ExtResource( 1 )]

[node name="TouchAbility" type="TouchScreenButton" parent="UI"]
position = Vector2( 431, 161 )
rotation = -1.5708
scale = Vector2( 0.448107, 0.448107 )
shape = SubResource( 5 )
passby_press = true
action = "ui_active_ability"

[node name="DPad" type="Node2D" parent="UI"]
visible = false
position = Vector2( 60, 186 )
scale = Vector2( 0.448107, 0.448107 )

[node name="TouchUp" type="TouchScreenButton" parent="UI/DPad"]
position = Vector2( 0, -9 )
normal = SubResource( 4 )
shape = SubResource( 3 )
passby_press = true
action = "ui_up"

[node name="TouchRight" type="TouchScreenButton" parent="UI/DPad"]
position = Vector2( 63, 26 )
rotation = 1.5708
normal = SubResource( 4 )
shape = SubResource( 3 )
passby_press = true
action = "ui_right"

[node name="TouchDown" type="TouchScreenButton" parent="UI/DPad"]
position = Vector2( 28, 89 )
rotation = 3.14159
normal = SubResource( 4 )
shape = SubResource( 3 )
passby_press = true
action = "ui_down"

[node name="TouchLeft" type="TouchScreenButton" parent="UI/DPad"]
position = Vector2( -35, 54 )
rotation = -1.5708
normal = SubResource( 4 )
shape = SubResource( 3 )
passby_press = true
action = "ui_left"

[node name="PanelOverride" type="Panel" parent="UI"]
margin_left = 1.0
margin_top = 180.0
margin_right = 101.0
margin_bottom = 260.0
custom_styles/panel = SubResource( 6 )

[node name="V_DPad" parent="UI" instance=ExtResource( 9 )]
margin_left = 37.0
margin_top = -97.0
margin_right = 237.0
margin_bottom = 103.0
rect_scale = Vector2( 0.3, 0.3 )
deadzone_size = 15.0
clampzone_size = 30.0
use_input_actions = false

[node name="V_DPad2" parent="UI" instance=ExtResource( 9 )]
margin_left = 384.0
margin_top = -97.0
margin_right = 584.0
margin_bottom = 103.0
rect_scale = Vector2( 0.3, 0.3 )
deadzone_size = 15.0
clampzone_size = 30.0
use_input_actions = false

[node name="Rooms" type="Navigation2D" parent="."]
script = ExtResource( 4 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 133.183, 118.911 )
scale = Vector2( 1, 0.995789 )
max_hp = 4

[node name="Camera2D" type="Camera2D" parent="."]

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="hp_changed" from="Player" to="UI" method="_on_Player_hp_changed"]
[connection signal="weapon_droped" from="Player" to="UI" method="_on_Player_weapon_droped"]
[connection signal="weapon_picked_up" from="Player" to="UI" method="_on_Player_weapon_picked_up"]
[connection signal="weapon_switched" from="Player" to="UI" method="_on_Player_weapon_switched"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
